# EEEN11202_code

./: .gitignore  README.md
lab-a/: hello_world.sh  lab_a.sh
lab-b/: lab_b.ipynb  my_python.ipynb
lab-c/: lab_c.py  main.py  numbers.csv  output.txt  pyproject.toml  rc_circuit.py  run_by_block.py
lab-d/: frequencies.txt  log.py  log.txt  pyproject.toml  test_lab_d.py  test_lab_d_code.py
lab-d/src/: lab_d.py  lab_part2.py  main.py
lab-e/: pyproject.toml  tau.txt
lab-e/src/: lab_e.py  learn_numpy.py  learn_scipy.py  main.py  sine_plot.html  sine_plotting.py
lab-f/: pyproject.toml
lab-f/src/: choices.py  lab_f.py  main.py  plotly_examples.py  polars_examples.py  time.py
lab-g/: pyproject.toml
lab-g/src/: lab_g.py  main.py  object_example  object_learn.py  process.py
lab-h/: log.txt  pyproject.toml
lab-h/data/: backup.txt
lab-h/src/: lab_h.py  main.py  over100.py  practice.py  student_example.py
lab-i/: pyproject.toml
lab-i/src/: lab_i.py  main.py  train_practice
lab-i/tests/: test_lab_i.py
lab-j/: main.py  pyproject.toml
lab-j/data/: answer.json  maze.txt  maze_1.txt
lab-j/src/: lab_j.py
lab-j/tests/: test_lab_j.py
