[project]
name = "lab-f"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastexcel>=0.20.2",
    "ipykernel==6.31.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pathlib>=1.0.1",
    "plotly>=6.7.0",
    "polars[rtcompat]>=1.40.1",
    "pyarrow>=24.0.0",
    "scienceplots>=2.2.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
